--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,28 @@
-<%- include('header'); %>>
-<% if(error === null){ %>
-    <div id="weather">
-        <div id="description"><%= description%></div>
-        <h1 id="temp"><%= temp%></h1>
-        <div id="location"><%= city%></div>
-    </div>
-<div id="city-form">
-    <form id="change-city" method="post" action="/">
-        <label>City</label>
-        <input type="text" id="city-name" name="cityname">
-        <br>
-        <input type="submit" value="Save changes">
-    </form>
-    <%} else { %>
-        <div role="alert">
-            <%= error %>
+<%- include('header'); %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 mx-auto text-center bg-primary mt-5 p-5 rounded">
+            <% if(error ===null) { %>
+                <h1 id="location"><%= city %></h1>
+                <ul class="list-group mt-3">
+                    <li class="list-group-item" id="description"><%= description %></li>
+                    <li class="list-group-item" id="temp"><%= temp %></li>
+                </ul>
+                <h1 class="mt-3"> Change city </h1>
+                <form id="change-city" method="post" action="/">
+                    <div class="form-group">
+                        <label for="city-name"> City </label>
+                        <input type="text" id="city-name" class="form-control" name="cityname">
+                    </div>
+                    <input type="submit" class="btn btn-grey" value="Save Changes">
+                </form>
+            <% } else { %>
+                <div class="alert alert-danger" role="alert">
+                    <%= error %>
+                </div>
+                <a class="btn btn-secondary text-white" href="/" role="button"> Try again</a>
+            <% } %>
         </div>
-        <a href="/" role="button">Try again </a>
-    <% } %>
+    </div>
 </div>
-<%- include('footer'); %>>
+<%- include('footer'); %>
